...
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- List(RecyclerView) containing the existing notes. -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notes_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/note_horizontal_edges_space"
            android:paddingTop="@dimen/note_top_edge_space"
            android:paddingBottom="@dimen/note_bot_edge_space"
            android:clipToPadding="false" />
...
                app:layout_scrollFlags="scroll|enterAlways|snap" />

            <!-- Top app bar for searching specific notes
            depending on user input, in user input field
            (EditText called with id search_edittext). -->
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar_search"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:visibility="gone"
                android:background="?attr/colorSurface"
                app:navigationIcon="@drawable/close_icon"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <!-- User input field(EditText) for user searching notes
                depending on user typed text. -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="17dp"
                    android:layout_marginRight="17dp"
                    android:hint="@string/search_edittext_hint"
                    android:fontFamily="@font/segoe_ui_regular"
...

            </com.google.android.material.appbar.MaterialToolbar>

            <!-- Top app bar for selecting specific notes,
            or all notes, for deleting them. -->
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar_select_notes"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:visibility="gone"
                app:title="@string/notes_selected"
                android:background="?attr/colorSurface"
                app:navigationIcon="@drawable/close_icon"
...
            app:fabCradleMargin="8dp"
            app:hideOnScroll="true" />

        <!-- Floating action button(add_new_note) for adding new note
        anchored with bottom app bar(bottom_app_bar). -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_new_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabCustomSize="63.96dp"
            android:src="@drawable/add_note_icon"
            app:layout_anchor="@id/bottom_app_bar"
            android:contentDescription="@string/content_description_add_new_note" />
...
