...
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="@dimen/vertical_content_space_in_note"
            android:paddingTop="@dimen/vertical_content_space_in_note"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/more_menu_button"
            app:layout_constraintEnd_toStartOf="@id/more_menu_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!-- Note title text containing title of note. -->
            <TextView
...
                android:textSize="@dimen/note_body_text_size"
                android:maxLines="2"
                android:ellipsize="end" />

            <!-- Chip group for displaying folders(chips) on a note. -->
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/folder_chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />

            <!-- Note date text,
            displaying the last date of edited/created note. -->
...
